# ebscopy

./: .editorconfig  .gitattributes  .gitignore  .readthedocs.yaml  CHANGES.txt  MANIFEST.in  README.md  index.html  params.json  pyproject.toml  setup.py
autodocs/: Makefile  conf.py  index.rst
autodocs/_build/doctrees/: ebscopy.doctree  ebscopy.tests.doctree  environment.pickle  index.doctree  modules.doctree
autodocs/_build/doctrees/_autosummary/: ebscopy.doctree  ebscopy.tests.doctree  modules.doctree
autodocs/_build/html/: .buildinfo  ebscopy.html  ebscopy.tests.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
autodocs/_build/html/_autosummary/: ebscopy.html  ebscopy.tests.html  modules.html
autodocs/_build/pickle/: .buildinfo  ebscopy.fpickle  ebscopy.tests.fpickle  environment.pickle  genindex.fpickle  globalcontext.pickle  index.fpickle  modules.fpickle  objects.inv  py-modindex.fpickle  search.fpickle  searchindex.pickle
docs/: INSTALL.md  INSTALL.txt  Makefile  USAGE.md  conf.py  index.rst  make.bat
docs/_build/doctrees/: ebscopy.doctree  ebscopy.tests.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  ebscopy.html  ebscopy.tests.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
ebscopy/: __init__.py  config.py  ebscopy.py  edsapi.py
ebscopy/test/: __init__.py  test_ebscopy.py
ebscopy/tests/: ebscopy_test.py
samples/: .ebscopy_env  plain_old_test.py  sample.ebscopy_env
(+16 files in other folders)
